--- a/components.html
+++ b/components.html
@@ -5,12 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <script type="module" crossorigin src="/2024-W6/assets/main-48d787c1.js"></script>
+  <link rel="stylesheet" href="/2024-W6/assets/main-101b3bc8.css">
 </head>
 
 <body>
     <!-- -----header start----- -->
-    <%- include('./layout/header'); -%>
-        <!-- -----header end----- -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<nav class="header navbar navbar-expand-md navbar-light bg-tea-100 p-0">
+  <div class="container-sm">
+    <!-- logo -->
+    <h1 class=" me-md-3 me-lg-6 navbar-brand p-0">
+      <a class="" href="#"><img src="/2024-W6/assets/logo-24020e29.svg" alt="Vivre"></a>
+    </h1>
+    <!-- burger btn -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="bi bi-list"></i>
+      <i class="bi bi-x-lg"></i>
+    </button>
+    <!-- collapsed menu -->
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <!-- search bar -->
+      <form class="search-bar d-flex me-auto position-relative">
+        <input class="form-control" type="search" placeholder="搜尋文章" aria-label="Search">
+        <button class="translate-middle-y " type="submit"><i class="bi bi-search"></i></button>
+      </form>
+      <div class="navbar-nav">
+        <a class="nav-link" aria-current="page" href="#">所有文章</a>
+        <a class="nav-link" href="#">訂閱方案</a>
+        <a class="nav-link" href="#">關於我們</a>
+        <button class="btn login btn-accent-200 text-white">登入/註冊</button>
+      </div>
+    </div>
+  </div>
+</nav>
+<script>
+  $(document).ready(function () {
+    $('.navbar-toggler').click(function (event) {
+      $(".container-sm").toggleClass("expand");
+      $("h1").toggleClass("d-none");
+    });
+  });
+</script>        <!-- -----header end----- -->
         <div class="container my-7">
             <div class="row py-10">
                 <div class="col-6">
@@ -72,8 +109,8 @@
                     <p class="my-2">熱門主題</p>
                     <div class="feature-box-item">
                         <picture>
-                            <source media="(min-width:768px)" srcset="../assets/images/theme-1.png" />
-                            <img src="../assets/images/theme-1-sm.png" alt="banner" class="w-100" alt="theme" />
+                            <source media="(min-width:768px)" srcset="/2024-W6/assets/theme-1-c3f2428d.png " />
+                            <img src="/2024-W6/assets/theme-1-sm-e28ce55e.png" alt="banner" class="w-100" alt="theme" />
                         </picture>
                         <a href="" class="top-50 start-50 translate-middle">
                             <p class="fs-6 fs-md-5 text-center text-white fw-bold">城市漫遊者</p>
@@ -82,8 +119,8 @@
                     <p class="my-2">精選文章</p>
                     <div class="card rounded-0 border-0 border-bottom border-gray-500">
                         <picture>
-                            <source media="(min-width:768px)" srcset="../assets/images/articles-1.png" />
-                            <img src="../assets/images/articles-1-sm.png" alt="theme" class="w-100" />
+                            <source media="(min-width:768px)" srcset="/2024-W6/assets/articles-1-ebc46e31.png " />
+                            <img src="/2024-W6/assets/articles-1-sm-203688b1.png" alt="theme" class="w-100" />
                         </picture>
                         <div class="card-body px-0 py-5">
                             <h3 class="h5 card-title mb-1 text-gray-500">私人島嶼的露營奇遇記</h3>
@@ -112,7 +149,7 @@
                 <div class="col-6"></div>
             </div>
         </div>
-        <script type="module" src="../main.js"></script>
+        
 </body>
 
 </html>
