--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,20 @@
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>contact</title>
+    <script type="module" crossorigin src="/2024-W6/assets/main-48d787c1.js"></script>
+    <link rel="stylesheet" href="/2024-W6/assets/main-101b3bc8.css">
+  </head>
+  <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <nav class="header navbar navbar-expand-md navbar-light bg-tea-100 p-0">
   <div class="container-sm">
     <!-- logo -->
     <h1 class=" me-md-3 me-lg-6 navbar-brand p-0">
-      <a class="" href="#"><img src="../assets/images/logo.svg" alt="Vivre"></a>
+      <a class="" href="#"><img src="/2024-W6/assets/logo-24020e29.svg" alt="Vivre"></a>
     </h1>
     <!-- burger btn -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -34,4 +45,16 @@
       $("h1").toggleClass("d-none");
     });
   });
-</script>
+</script>    <h1>我是contact</h1>
+    <footer class="footer">
+    <div class="container">
+        <div class="border-top border-gray-300">
+            <p class="py-4 text-tea-400 text-center">©Vivre 2024 All right Reserved</p>
+
+        </div>
+    </div>
+   
+</footer>
+    
+  </body>
+</html>
