輪播圖按鈕樣式修正

--- a/pages/index.html
+++ b/pages/index.html
@@ -569,7 +569,7 @@
       <section class="feature-box">
         <div class="container">
 
-          <div class="d-flex position-relative">
+          <div class="d-flex justify-content-between w-100">
             <h2 class="fs-4 fs-md-2 mb-5">品味生活</h2>
             <!-- swiper controller -->
             <div class="swiper-nav traveling d-none d-md-flex">
