--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/2024-W6-test/assets/main-48d787c1.js"></script>
-    <link rel="stylesheet" href="/2024-W6-test/assets/main-101b3bc8.css">
+    <script type="module" crossorigin src="/2024-W6-test/assets/main-d37a2512.js"></script>
+    <link rel="stylesheet" href="/2024-W6-test/assets/main-bf192d6a.css">
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,7 +14,7 @@
   <div class="container-sm">
     <!-- logo -->
     <h1 class=" me-md-3 me-lg-6 navbar-brand p-0">
-      <a class="" href="#"><img src="/2024-W6-test/assets/logo-24020e29.svg" alt="Vivre"></a>
+      <a class="" href="index.html"><img src="/2024-W6-test/assets/logo-24020e29.svg" alt="Vivre"></a>
     </h1>
     <!-- burger btn -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
